# QtProjCmakeTest

./: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
ui/: CMakeLists.txt
